# ecommerce-web-application

./: manage.py  pyproject.toml
ecommerce_web_application/: asgi.py  settings.py  urls.py  wsgi.py
