[tool.poetry]
name = "ecommerce-web-application"
version = "0.1.0"
description = "This is the Ecommerece Project for better searching"
authors = ["Salman Ahmad <ssalmanmughal73@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
